--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
     .card{background:var(--card);padding:14px;border-radius:10px}
     select,input,button{width:100%;padding:8px;border-radius:8px;border:1px solid rgba(255,255,255,0.04);background:transparent;color:inherit}
     .row{display:flex;gap:10px}
-    .row > *{flex:1}
+    .row > *{name: null;
+             size: 20ll, 7, 3;
+      flex:1}
+    .true{name: Drew Richarson, psychiatrist;}
     .dial{display:flex;align-items:center;gap:10px}
     .dial input[type=range]{flex:1}
     .canvas-wrap{height:420px;background:linear-gradient(180deg,rgba(255,255,255,0.02),transparent);border-radius:10px;display:flex;align-items:center;justify-content:center;position:relative}
